--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,211 @@
-opencv-python
+absl-py==2.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+altair==5.5.0
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.8.0
+asgiref==3.8.1
+asttokens==3.0.0
+attrs==25.1.0
+audioop-lts==0.2.1
+beautifulsoup4==4.13.3
+bleach==6.2.0
+blinker==1.9.0
+branca==0.8.1
+bs4==0.0.2
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+currency.converter==0.5.5
+CurrencyConverter==0.18.3
+cx_Freeze==7.2.10
+cx_Logging==3.2.1
+cycler==0.12.1
+debugpy==1.8.12
+decorator==5.1.1
+discord==2.3.2
+discord.py==2.5.2
+distro==1.9.0
+Django==5.1.7
+docx2pdf==0.1.8
+et_xmlfile==2.0.0
+executing==2.2.0
+filelock==3.17.0
+Flask==3.1.0
+folium==0.19.5
+fonttools==4.56.0
+frozendict==2.4.6
+frozenlist==1.5.0
+fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+googletrans==4.0.0rc1
+gTTS==2.5.4
+h11==0.14.0
+h2==3.2.0
+h5py==3.13.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==5.2.0
+idna==2.10
+ipykernel==6.29.5
+ipython==8.32.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.5
+jiter==0.9.0
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kaggle==1.7.4.2
+keras==3.9.0
+keyboard==0.13.5
+kiwisolver==1.4.8
+legacy-cgi==2.6.2
+libretranslatepy==2.1.1
+lief==0.16.3
+lingua==4.15.0
+lingua-language-detector==2.1.1
+lxml==5.3.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml_dtypes==0.5.1
+MouseInfo==0.1.3
+mpmath==1.3.0
+multidict==6.2.0
+multitasking==0.0.11
+namex==0.0.8
+narwhals==1.28.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+npx==0.1.6
+numpy==2.1.1
+openai==1.68.2
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+optree==0.14.1
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+pandas-datareader==0.10.0
+parso==0.8.4
+peewee==3.17.9
+pefile==2023.2.7
+pillow==11.1.0
+platformdirs==4.3.6
+playsound==1.2.2
+polib==1.2.0
+prompt_toolkit==3.0.50
+propcache==0.3.0
+protobuf==5.29.3
+psutil==7.0.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyarrow==19.0.1
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+pygame==2.6.1
+PyGetWindow==0.0.9
+Pygments==2.19.1
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
+PyJWT==2.10.1
+PyMsgBox==1.0.9
+pyparsing==3.2.1
+pyperclip==1.9.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySide6==6.8.2.1
+PySide6_Addons==6.8.2.1
+PySide6_Essentials==6.8.2.1
+PySocks==1.7.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.0.1
+python-slugify==8.0.4
+python-telegram-bot==21.10
+pytubefix==8.12.2
+pytweening==1.2.0
+pytz==2025.1
+pyupbit==0.2.34
+pywin32==308
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+pyzmq==26.2.1
+qrcode==8.0
+rarfile==4.2
+referencing==0.36.2
+requests==2.32.3
+rfc3986==1.5.0
+rich==13.9.4
+rpds-py==0.23.1
+schedule==1.2.2
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+selenium==4.29.0
+setuptools==75.8.0
+shiboken6==6.8.2.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SpeechRecognition==3.14.1
+sqlparse==0.5.3
+stack-data==0.6.3
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+streamlit==1.42.2
+sympy==1.13.1
+tenacity==9.0.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+toml==0.10.2
+torch==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+translate==3.6.1
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+tzdata==2025.1
+ultralytics==8.3.83
+ultralytics-thop==2.0.14
+urllib3==2.3.0
+watchdog==6.0.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+xyzservices==2025.1.0
+yarl==1.18.3
+yfinance==0.2.54
